      conditions.
    - [server] Add a new GPG_FINGERPRINT_ID variable to the access.conf file
      so that full GnuPG fingerprints can be required for incoming SPA packets
      in addition to the appreviated GnuPG signatures listed in GPG_REMOTE_ID.
      From the test suite, an example fingerprint is

      GPG_FINGERPRINT_ID            00CC95F05BC146B6AC4038C9E36F443C6A3FAD56

fwknop-2.6.2 (04/28/2014):
    - [libfko] fix double free bug in SPA parser discovered with the new
      python SPA payload fuzzer (see the 'spa_encoding_fuzzing' branch which
      is not merged into the master branch yet).  This bug could be triggered
      in fwknopd with a malicious SPA payload, but only when GnuPG is used and
      when an attacker is in possession of valid GnuPG keys listed in the
      access.conf file. In other words, an arbitrary attacker cannot trigger
      this bug. Further, when Rijndael is used for SPA packet encryption, this
      bug cannot be triggered at all due to an length/format check towards the
      end of _rijndael_decrypt(). This bug was introduced in the 2.6.1
      development series, and no previous versions of fwknop are affected.

fwknop-2.6.1 (04/12/2014):
    - Updated copyright and authorship information to include a standard
      header which references both the AUTHORS and CREDITS files.  The
      specific language in this header was created by the Debian legal team at
      the request of Franck Joncourt.
    - [server] When GnuPG is used, the default now is to require that incoming
      SPA packets are signed by a key listed in GPG_REMOTE_ID for each
      access.conf stanza. In other words, the usage of GPG_REQUIRE_SIG is no
      longer necessary in order to authenticate SPA packets via the GnuPG
      signature. Verification of GnuPG signatures can be disabled with a new
      access.conf variable GPG_DISABLE_SIG, but this is NOT a recommended
      configuration.